pc5/team/round3-now-this-is-pod-racing/challenge/firstpod/secondspace-files/secondspace-ingresses/keycloak-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
spec:
  tls:
    - hosts:
      - keycloak.merch.codes
      secretName: merch-codes-secret
  rules:
  - host: keycloak.merch.codes
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: keycloak-service
            port:
              number: 80
