pc5/team/round3-now-this-is-pod-racing/challenge/firstpod/secondspace-files/secondspace-ingresses/pgadmin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin
spec:
  tls:
    - hosts:
      - db.merch.codes
      secretName: merch-codes-secret
  rules:
  - host: db.merch.codes
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pgadmin-service
            port:
              number: 80
